# constrained-minds

./: .gitignore  README.md  pyproject.toml
constrained_minds/: __init__.py
docs/superpowers/plans/: 2026-03-27-constrained-minds-implementation.md
docs/superpowers/specs/: 2026-03-27-constrained-minds-design.md
scripts/: extract_activations.py  train_per_model_saes.py  train_universal_sae.py
